--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ djangorestframework
 drf-yasg
 djangorestframework-xml
 djangorestframework-csv
+djangorestframework-simplejwt
 
 # dev
 django-debug-toolbar
