add settings local support

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ djangorestframework-xml
 djangorestframework-csv
 djangorestframework-simplejwt
 gunicorn
+psycopg2-binary
 
 # dev
 django-debug-toolbar
