--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,11 @@ DEBUG=no
 POSTGRES_PASSWORD=superSecretPassword
 POSTGRES_USER=example_user
 POSTGRES_DB=currency
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 
 # rabbitmq
 RABBITMQ_DEFAULT_USER=RQuser
 RABBITMQ_DEFAULT_PASS=RQpassword
-RABBITMQ_DEFAULT_HOST=localhost
+RABBITMQ_DEFAULT_HOST=rabbitmq
 RABBITMQ_DEFAULT_PORT=5672
