--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,5 @@
-upstream backend {
-    # TODO
-    server localhost:8000;
+upstream django {
+    server backend:8000;
     # server localhost:8001;
 }
 
@@ -20,6 +19,6 @@ server {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            proxy_pass http://backend;
+            proxy_pass http://django;
         }
 }
