--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,6 +65,10 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
 
+  memcached:
+    image: memcached:1.6.15-alpine
+    container_name: memcached
+
   nginx:
     image: nginx:1.21.6
     container_name: nginx
