--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ RABBITMQ_DEFAULT_USER=RQuser
 RABBITMQ_DEFAULT_PASS=RQpassword
 RABBITMQ_DEFAULT_HOST=rabbitmq
 RABBITMQ_DEFAULT_PORT=5672
+
+# memcached
+MEMCACHED_HOST=memcached
+MEMCACHED_PORT=11211
